--- a/CSS/headerCSS.css
+++ b/CSS/headerCSS.css
@@ -21,8 +21,31 @@
         url('fonts/TitilliumWeb/TitilliumWeb-Regular.ttf') format('truetype');
 }
 
-body{
-    margin: 0px;
-    font-family: 'plaza';
-    background: linear-gradient(red , orange , green 10% , orange , red);
+@media only screen and (min-width: 0px){
+
+}
+
+@media only screen and (min-width: 768px){
+
+}
+
+@media only screen and (min-width: 992px){
+    
+    header{
+        font-family: 'righteous';
+        margin: 2%;
+        background: rgba(20, 97, 20, 0.5);
+        border-radius: 10px;
+        padding: 5px;
+    }
+    
+    header li{
+        display: inline;
+        margin: 20px;
+    }
+
+    header li a{
+        color: rgb(0, 0, 99);
+        text-decoration: none;
+    }
 }
