--- a/CSS/index layout.css
+++ b/CSS/index layout.css
@@ -21,8 +21,56 @@
         url('fonts/TitilliumWeb/TitilliumWeb-Regular.ttf') format('truetype');
 }
 
-body{
-    margin: 0px;
-    font-family: 'plaza';
-    background: linear-gradient(red , orange , green 10% , orange , red);
+@media only screen and (min-width: 0px){
+
+}
+
+@media only screen and (min-width: 768px){
+
+}
+
+@media only screen and (min-width: 992px){
+
+    .body{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: fit-content 1fr;
+        margin: auto;
+        padding: 10px;
+        width: 90%;
+        background: radial-gradient(rgba(255, 51, 0, 0.7),rgba(128, 62, 0, 0.7),rgba(255, 0, 0,0.25));
+        border-radius: 5px;
+        font-size: 20px;
+    }
+
+    .header{
+        text-align: center;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    .bio{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    .MiiImg {
+        /*center img*/
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    .MiiImg img{
+        margin: auto;
+        width: 50%;
+    }
+
+
+
 }
