--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -32,6 +32,7 @@
 @media only screen and (min-width: 992px){
 
     .body{
+        text-align: center;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: fit-content 1fr;
@@ -43,5 +44,21 @@
         font-size: 20px;
     }
 
-    
+    /*iframe_____________________________________________________________*/
+
+    .mapouter{
+        margin: 0px;
+        opacity: 75%;
+        transition: 1s;
+    }
+
+    .mapouter:hover{
+        opacity: 100%;
+        transition: 1s;
+    }
+
+    iframe{
+        width: 100%;
+        height: 500px;
+    }
 }
