--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -23,9 +23,65 @@
 
 @media only screen and (min-width: 0px){
 
+    .body{
+        text-align: center;
+        margin: auto;
+        width: 90%;
+        background: radial-gradient(rgba(255, 51, 0, 0.7),rgba(128, 62, 0, 0.7),rgba(255, 0, 0,0.25));
+        border-radius: 5px;
+        font-size: 10px;
+    }
+
+    /*iframe_____________________________________________________________*/
+
+    .mapouter{
+        margin: 0px;
+        opacity: 75%;
+        transition: 1s;
+    }
+
+    .mapouter:hover{
+        opacity: 100%;
+        transition: 1s;
+    }
+
+    iframe{
+        border-radius: 2px;
+        width: 100%;
+        height: 500px;
+    }
+
 }
 
 @media only screen and (min-width: 768px){
+
+    .body{
+        text-align: center;
+        margin: auto;
+        width: 90%;
+        background: radial-gradient(rgba(255, 51, 0, 0.7),rgba(128, 62, 0, 0.7),rgba(255, 0, 0,0.25));
+        border-radius: 5px;
+        font-size: 15px;
+    }
+
+    /*iframe_____________________________________________________________*/
+
+    .mapouter{
+        margin: 0px;
+        opacity: 75%;
+        transition: 1s;
+    }
+
+    .mapouter:hover{
+        opacity: 100%;
+        transition: 1s;
+    }
+
+    iframe{
+        border-radius: 2px;
+        width: 100%;
+        height: 500px;
+    }
 
 }
 
@@ -54,6 +110,7 @@
     }
 
     iframe{
+        border-radius: 2px;
         width: 100%;
         height: 500px;
     }
