an update from the previous

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -64,6 +64,10 @@
         font-size: 15px;
     }
 
+    h1{
+        margin: 5px;
+    }
+
     /*iframe_____________________________________________________________*/
 
     .mapouter{
