--- a/CSS/headerCSS.css
+++ b/CSS/headerCSS.css
@@ -65,6 +65,7 @@
     /*this is the desktop footer*/
 
     footer{
+        clear: both;
         border-radius: 5px;
         font-family: 'righteous';
         text-align: center;
