--- a/CSS/sitelist layout.css
+++ b/CSS/sitelist layout.css
@@ -39,6 +39,8 @@
     .body > div{
         text-align: center;
         font-size: 20px;
+        background: rgba(26, 110, 0, 0.507);
+        margin-bottom: 10px;
     }
 
     .body > div img{
@@ -51,14 +53,12 @@
         clear: both;
         width: 49%;
         float: left;
-        background: blue;
     }
 
     .body > div:nth-of-type(even){
         border-radius: 5px;
         width: 49%;
         float: right;
-        background: red;
     }
 
 }
