--- a/CSS/index layout.css
+++ b/CSS/index layout.css
@@ -21,16 +21,50 @@
         url('fonts/TitilliumWeb/TitilliumWeb-Regular.ttf') format('truetype');
 }
 
-@media only screen and (min-width: 0px){
+@media only screen and (min-width: 600px){
+    .body{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: fit-content 1fr;
+        margin: auto;
+        padding: 10px;
+        width: 90%;
+        background: radial-gradient(rgba(255, 51, 0, 0.7),rgba(128, 62, 0, 0.7),rgba(255, 0, 0,0.25));
+        border-radius: 5px;
+        font-size: 20px;
+    }
 
+    .header{
+        text-align: center;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    .bio{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    .MiiImg {
+        /*center img*/
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    .MiiImg img{
+        margin: auto;
+        height: 100%;
+        width: min-content;
+    }
 }
 
 @media only screen and (min-width: 768px){
-
-}
-
-@media only screen and (min-width: 992px){
-
     .body{
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -70,7 +104,53 @@
         margin: auto;
         width: 50%;
     }
+}
 
+@media only screen and (min-width: 992px){
 
+    .body{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: fit-content 1fr;
+        margin: auto;
+        padding: 10px;
+        width: 90%;
+        background: radial-gradient(rgba(255, 51, 0, 0.7),rgba(128, 62, 0, 0.7),rgba(255, 0, 0,0.25));
+        border-radius: 5px;
+        font-size: 40px;
+    }
+
+    .header{
+        text-align: center;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    .bio{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        font-size: 40px;
+    }
+
+    .bio > p{
+        font-size: 50px;
+    }
+
+    .MiiImg {
+        /*center img*/
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    .MiiImg img{
+        margin: auto;
+        width: 50%;
+    }
 
 }
