--- a/CSS/sitelist layout.css
+++ b/CSS/sitelist layout.css
@@ -21,11 +21,81 @@
         url('fonts/TitilliumWeb/TitilliumWeb-Regular.ttf') format('truetype');
 }
 
-@media only screen and (min-width: 0px){
+@media only screen and (min-width: 600px){
+
+    a:visited,a:hover,a:link{
+        color: rgb(46, 46, 46);
+        text-decoration: none;
+    }
+
+    a:active{
+        color: rgb(255, 255, 255);
+        text-decoration: none;
+    }
+
+    .body{
+        width: 90%;
+        margin: auto;
+    }
+
+    .body > div{
+        text-align: center;
+        font-size: 20px;
+        background: rgba(26, 110, 0, 0.507);
+        margin-bottom: 10px;
+    }
+
+    .body > div img{
+        width: 100%;
+        border-radius: 5px;
+    }
+
+    .body > div:nth-of-type(odd){
+        border-radius: 5px;
+        clear: both;
+        width: 49%;
+        float: left;
+    }
+
+    .body > div:nth-of-type(even){
+        border-radius: 5px;
+        width: 49%;
+        float: right;
+    }
 
 }
 
 @media only screen and (min-width: 768px){
+
+    .body{
+        width: 90%;
+        margin: auto;
+    }
+
+    .body > div{
+        text-align: center;
+        font-size: 20px;
+        background: rgba(26, 110, 0, 0.507);
+        margin-bottom: 10px;
+    }
+
+    .body > div img{
+        width: 100%;
+        border-radius: 5px;
+    }
+
+    .body > div:nth-of-type(odd){
+        border-radius: 5px;
+        clear: both;
+        width: 49%;
+        float: left;
+    }
+
+    .body > div:nth-of-type(even){
+        border-radius: 5px;
+        width: 49%;
+        float: right;
+    }
 
 }
 
