--- a/CSS/index layout.css
+++ b/CSS/index layout.css
@@ -29,7 +29,7 @@
         margin: auto;
         padding: 10px;
         width: 90%;
-        background: radial-gradient(rgba(255, 51, 0, 0.7),rgba(128, 62, 0, 0.7),rgba(255, 0, 0,0.25));
+        background: linear-gradient(rgba(83, 83, 83, 0.836));
         border-radius: 5px;
         font-size: 20px;
     }
@@ -72,7 +72,7 @@
         margin: auto;
         padding: 10px;
         width: 90%;
-        background: radial-gradient(rgba(255, 51, 0, 0.7),rgba(128, 62, 0, 0.7),rgba(255, 0, 0,0.25));
+        background: linear-gradient(rgba(83, 83, 83, 0.7));
         border-radius: 5px;
         font-size: 20px;
     }
@@ -115,7 +115,7 @@
         margin: auto;
         padding: 10px;
         width: 90%;
-        background: radial-gradient(rgba(255, 51, 0, 0.7),rgba(128, 62, 0, 0.7),rgba(255, 0, 0,0.25));
+        background: linear-gradient(rgba(83, 83, 83, 0.35),rgba(83, 83, 83, 0.35));
         border-radius: 5px;
         font-size: 40px;
     }
