--- a/CSS/resume.css
+++ b/CSS/resume.css
@@ -26,11 +26,13 @@
     .body{
         width: 100%;
         margin: auto;
+        font-family: 'open';
+        text-align: center;
     }
 
     .body > iframe{
         width: 100%;
-        height: 700px;
+        height: 350px;
     }
 
 }
@@ -53,5 +55,6 @@
         width: 100%;
         height: 700px;
     }
+
 
 }
