--- a/CSS/headerCSS.css
+++ b/CSS/headerCSS.css
@@ -21,7 +21,55 @@
         url('fonts/TitilliumWeb/TitilliumWeb-Regular.ttf') format('truetype');
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (min-width: 600px){
+
+    /*this is the header*/
+
+    header{
+        font-family: 'righteous';
+        margin: 2%;
+        background: rgba(20, 97, 20, 0.5);
+        border-radius: 10px;
+        padding: 5px;
+    }
+    
+    header li{
+        display: inline;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    header li a{
+        color: rgb(0, 0, 99);
+        text-decoration: none;
+        padding: 20px;
+    }
+
+    header li a:hover{
+        border-radius: 5px;
+        background: rgba(211, 211, 211,0.2);
+    }
+
+    /*body background and font*/
+
+    body{
+        margin: 0px;
+        font-family: 'plaza';
+        background: linear-gradient(red , orange , green 10% , orange , red);
+    }
+
+    /*this is the footer*/
+
+    footer{
+        clear: both;
+        border-radius: 5px;
+        font-family: 'righteous';
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        background: rgb(255, 165, 0, 0.5);
+        color: rgb(68, 68, 68);
+    }
 
 }
 
