--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -41,6 +41,10 @@
         border-right: solid black 1px;
     }
 
+    img{
+        width: 40px;
+    }
+
 }
 
 @media only screen and (min-width: 768px){
@@ -58,6 +62,10 @@
         border-right: solid black 2px;
     }
 
+    img{
+        width: 60px;
+    }
+
 }
 
 @media only screen and (min-width: 992px){
@@ -73,6 +81,10 @@
 
     .body th{
         border-right: solid black 3px;
+    }
+
+    img{
+        width: 150px;
     }
 
 }
