--- a/CSS/sitelist layout.css
+++ b/CSS/sitelist layout.css
@@ -23,7 +23,11 @@
 
 @media only screen and (min-width: 600px){
 
-    a:visited,a:hover,a:link{
+    .body a:visited{
+        color: black;
+    }
+
+    .body a:hover,.body a:link{
         color: rgb(46, 46, 46);
         text-decoration: none;
     }
