--- a/CSS/sitelist layout.css
+++ b/CSS/sitelist layout.css
@@ -23,13 +23,16 @@
 
 @media only screen and (min-width: 600px){
 
-    .body a:visited{
+    .body a:visited, .body a:link{
         color: black;
+        text-decoration: none;
     }
 
-    .body a:hover,.body a:link{
-        color: rgb(46, 46, 46);
-        text-decoration: none;
+    .body a:hover{
+        color: rgb(255, 255, 255);
+        font-size: 60px;
+        transition: 1s;
+        background-color: black;
     }
 
     a:active{
@@ -47,6 +50,12 @@
         font-size: 20px;
         background: rgba(26, 110, 0, 0.507);
         margin-bottom: 10px;
+    }
+
+    .body > div > a > p:hover{
+        animation-name: FntGrow;
+        animation-duration: 750ms;
+        animation-fill-mode: forwards;
     }
 
     .body > div img{
@@ -117,9 +126,14 @@
         margin-bottom: 10px;
     }
 
+    .body > div > a > p{
+        font-size: 50px;
+    }
+
     .body > div img{
         width: 100%;
         border-radius: 5px;
+        height: 351px;
     }
 
     .body > div:nth-of-type(odd){
@@ -134,5 +148,22 @@
         width: 49%;
         float: right;
     }
-
+}
+@keyframes FntGrow {
+    0%
+    {
+        font-size: 50px;
+    }
+    50%
+    {
+        font-size: 55px;
+        color: rgb(128, 128, 128);
+        background-color: rgba(0, 0, 0, 0.479);
+    }
+    100%
+    {
+        font-size: 60px;
+        color: rgb(255, 255, 255);
+        background-color: rgb(0, 0, 0);
+    }
 }
