--- a/CSS/index layout.css
+++ b/CSS/index layout.css
@@ -105,8 +105,8 @@
 
     .body{
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: fit-content 1fr;
+        grid-template-columns: 1fr;
+        grid-template-rows: fit-content 2fr 1fr;
         margin: auto;
         padding: 10px;
         width: 90%;
@@ -126,8 +126,8 @@
     .bio{
         grid-column-start: 1;
         grid-column-end: 2;
-        grid-row-start: 2;
-        grid-row-end: 3;
+        grid-row-start: 3;
+        grid-row-end: 4;
         font-size: 30px;
     }
 
@@ -135,17 +135,21 @@
         font-size: 30px;
     }
 
+    .bio h2{
+        text-align: center;
+    }
+
     .MiiImg {
         /*center img*/
-        grid-column-start: 2;
-        grid-column-end: 3;
+        grid-column-start: 1;
+        grid-column-end: 2;
         grid-row-start: 2;
         grid-row-end: 3;
     }
 
     .MiiImg img{
-        margin: auto;
-        width: 100%;
+        margin-left: 37.5%;
+        width: 25%;
     }
 
 }
