--- a/CSS/index layout.css
+++ b/CSS/index layout.css
@@ -128,11 +128,14 @@
         grid-column-end: 2;
         grid-row-start: 3;
         grid-row-end: 4;
-        font-size: 30px;
+        font-size: 60px;
     }
 
     .bio > p{
-        font-size: 30px;
+        font-size: 60px;
+        width: 90%;
+        margin-left: 5%;
+        text-align: center;
     }
 
     .bio h2{
