--- a/CSS/headerCSS.css
+++ b/CSS/headerCSS.css
@@ -21,18 +21,33 @@
         url('fonts/TitilliumWeb/TitilliumWeb-Regular.ttf') format('truetype');
 }
 
+:root{
+    --main-color: rgb(31, 151, 31);
+}
+
 @media only screen and (min-width: 600px){
 
-    /*this is the header*/
+    /*body background and font for the entire page*/
+    body{
+        margin: 0px;
+        font-family: 'plaza';
+        background-color: white;
+    }
 
+    /*this is the header*/
     header{
         font-family: 'righteous';
         margin: 2%;
-        background: rgba(20, 97, 20, 0.5);
+        background: var(--main-color);
         border-radius: 10px;
         padding: 5px;
     }
     
+    header ul{
+        display: flex;
+        justify-content: space-evenly;
+    }
+
     header li{
         display: inline;
         margin: 0px;
@@ -40,28 +55,17 @@
     }
 
     header li a{
-        color: rgb(0, 0, 99);
+        color: black;
         text-decoration: none;
-        padding: 20px;
+        padding: 5px;
     }
 
     header li a:hover{
         border-radius: 5px;
-        background: rgba(211, 211, 211,0.2);
+        background: rgba(172, 172, 172, 0.5);
     }
 
-    /*body background and font*/
-
-    body{
-        margin: 0px;
-        font-family: 'plaza';
-        animation-name: colorful;
-        animation-duration: 5s;
-        animation-iteration-count: infinite;
-        }
-
     /*this is the footer*/
-
     footer{
         clear: both;
         border-radius: 5px;
@@ -69,8 +73,9 @@
         text-align: center;
         margin-left: auto;
         margin-right: auto;
-        background: rgb(255, 165, 0, 0.5);
-        color: rgb(68, 68, 68);
+        background: var(--main-color);
+        color: black;
+        width: max-content;
     }
 
 }
@@ -78,41 +83,35 @@
 @media only screen and (min-width: 768px){
 
     /*this is the header*/
-
+    
     header{
-        font-family: 'righteous';
         margin: 2%;
-        background: rgba(20, 97, 20, 0.5);
+        background: var(--main-color);
         border-radius: 10px;
         padding: 5px;
     }
-    
+
     header li{
         display: inline;
         margin: 0px;
         padding: 0px;
+        font-size: 20px;
     }
 
     header li a{
-        color: rgb(0, 0, 99);
+        transition-duration: 1s;
+        color: black;
         text-decoration: none;
         padding: 20px;
     }
 
     header li a:hover{
-        border-radius: 5px;
-        background: rgba(211, 211, 211,0.2);
-    }
-
-    /*body background and font*/
-
-    body{
-        margin: 0px;
-        font-family: 'plaza';
+        border-radius: 20px;
+        background: rgba(255, 255, 255, 0.774);
+        transition-duration: 1s;
     }
 
     /*this is the footer*/
-
     footer{
         clear: both;
         border-radius: 5px;
@@ -120,60 +119,21 @@
         text-align: center;
         margin-left: auto;
         margin-right: auto;
-        background: rgb(255, 165, 0, 0.5);
-        color: rgb(68, 68, 68);
+        width: max-content;
     }
-
 }
 
 @media only screen and (min-width: 992px){
-    
-    /*this is the desktop header*/
 
+    /*This is the header*/
     header{
-        font-family: 'righteous';
-        margin: 2%;
-        background: rgba(20, 97, 20, 0.5);
-        border-radius: 10px;
-        padding: 5px;
+        font-size: 35px;
     }
     
-    header li{
-        display: inline;
-        margin: 0px;
-        padding: 0px;
-    }
-
     header li a{
-        color: rgb(0, 0, 99);
-        text-decoration: none;
         padding: 20px;
     }
 
-    header li a:hover{
-        border-radius: 5px;
-        background: rgba(211, 211, 211,0.2);
-    }
-
-    /*body background and font*/
-
-    body{
-        margin: 0px;
-        font-family: 'plaza';
-    }
-
-    /*this is the desktop footer*/
-
-    footer{
-        border-radius: 5px;
-        font-family: 'righteous';
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        background: rgb(255, 165, 0, 0.5);
-        color: rgb(68, 68, 68);
-        width: fit-content;
-    }
 }
 @keyframes colorful {
     0%
