--- a/CSS/resume.css
+++ b/CSS/resume.css
@@ -1,3 +1,9 @@
+/*Author: Connor Knight*/
+
+/*This is the css for the resume page*/
+
+/*All possible fonts that can be used are defined here*/
+
 @font-face{
     font-family: 'plaza';
     src:
@@ -21,8 +27,10 @@
         url('fonts/TitilliumWeb/TitilliumWeb-Regular.ttf') format('truetype');
 }
 
+/*the base setup for all screens bigger than 600px and the specialization for the small screen.*/
 @media only screen and (min-width: 600px){
 
+    /*defines the body's font and font alignment*/
     .body{
         width: 100%;
         margin: auto;
@@ -30,6 +38,7 @@
         text-align: center;
     }
 
+    /**/
     .body > iframe{
         width: 100%;
         height: max-content;
