--- a/CSS/sitelist layout.css
+++ b/CSS/sitelist layout.css
@@ -30,9 +30,13 @@
 
     .body a:hover{
         color: rgb(255, 255, 255);
-        font-size: 60px;
+        font-size: 30px;
         transition: 1s;
         background-color: black;
+    }
+
+    .body h1{
+        text-align: center; 
     }
 
     a:active{
@@ -48,12 +52,12 @@
     .body > div{
         text-align: center;
         font-size: 20px;
-        background: rgba(26, 110, 0, 0.507);
+        background: var(--main-color);
         margin-bottom: 10px;
     }
 
     .body > div > a > p:hover{
-        animation-name: FntGrow;
+        animation-name: FntGrow1;
         animation-duration: 750ms;
         animation-fill-mode: forwards;
     }
@@ -61,6 +65,7 @@
     .body > div img{
         width: 100%;
         border-radius: 5px;
+        height: 130px;
     }
 
     .body > div:nth-of-type(odd){
@@ -80,79 +85,137 @@
 
 @media only screen and (min-width: 768px){
 
-    .body{
-        width: 90%;
-        margin: auto;
+    .body a:hover{
+        font-size: 40px;
+    }
+
+    .body h1{
+        font-size: 40px;
     }
 
     .body > div{
-        text-align: center;
-        font-size: 20px;
-        background: rgba(26, 110, 0, 0.507);
-        margin-bottom: 10px;
+        font-size: 30px;
     }
 
     .body > div img{
-        width: 100%;
-        border-radius: 5px;
+        height: 190px;
     }
 
-    .body > div:nth-of-type(odd){
-        border-radius: 5px;
-        clear: both;
-        width: 49%;
-        float: left;
+    .body > div > a > p:hover{
+        animation-name: FntGrow2;
+        animation-duration: 750ms;
+        animation-fill-mode: forwards;
     }
-
-    .body > div:nth-of-type(even){
-        border-radius: 5px;
-        width: 49%;
-        float: right;
-    }
-
 }
 
 @media only screen and (min-width: 992px){
 
-    .body{
-        width: 90%;
-        margin: auto;
+    .body a:hover{
+        font-size: 50px;
+    }
+
+    .body h1{
+        font-size: 60px;
     }
 
     .body > div{
-        text-align: center;
-        font-size: 20px;
-        background: rgba(26, 110, 0, 0.507);
-        margin-bottom: 10px;
-    }
-
-    .body > div > a > p{
-        font-size: 50px;
+        font-size: 40px;
     }
 
     .body > div img{
-        width: 100%;
-        border-radius: 5px;
-        height: 351px;
+        height: 350px;
     }
 
-    .body > div:nth-of-type(odd){
-        border-radius: 5px;
-        clear: both;
-        width: 49%;
-        float: left;
-    }
-
-    .body > div:nth-of-type(even){
-        border-radius: 5px;
-        width: 49%;
-        float: right;
+    .body > div > a > p:hover{
+        animation-name: FntGrow3;
+        animation-duration: 750ms;
+        animation-fill-mode: forwards;
     }
 }
-@keyframes FntGrow {
+
+/*this is the animation for the smallest screen*/
+@keyframes FntGrow1 {
+    0%
+    {
+        font-size: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    50%
+    {
+        font-size: 25px;
+        color: rgb(128, 128, 128);
+        background-color: rgba(0, 0, 0, 0.479);
+        margin-top: 17px;
+        margin-bottom: 17px;
+    }
+    100%
+    {
+        font-size: 26.5px;
+        color: rgb(255, 255, 255);
+        background-color: rgb(0, 0, 0);
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+}
+
+/*this is the animation for the small screen*/
+@keyframes FntGrow2 {
+    0%
+    {
+        font-size: 30px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    50%
+    {
+        font-size: 35px;
+        color: rgb(128, 128, 128);
+        background-color: rgba(0, 0, 0, 0.479);
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    100%
+    {
+        font-size: 37px;
+        color: rgb(255, 255, 255);
+        background-color: rgb(0, 0, 0);
+        margin-top: 27px;
+        margin-bottom: 27px;
+    }
+}
+
+/*this is the animation for the large screen*/
+@keyframes FntGrow3 {
+    0%
+    {
+        font-size: 40px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+    50%
+    {
+        font-size: 45px;
+        color: rgb(128, 128, 128);
+        background-color: rgba(0, 0, 0, 0.479);
+    }
+    100%
+    {
+        font-size: 50px;
+        color: rgb(255, 255, 255);
+        background-color: rgb(0, 0, 0);
+        margin-top: 35px;
+        margin-bottom: 30px;
+    }
+}
+
+/*this is the animation for the largest screen*/
+@keyframes FntGrow4 {
     0%
     {
         font-size: 50px;
+        margin-top: 40px;
+        margin-bottom: 40px;
     }
     50%
     {
