--- a/CSS/sitelist layout.css
+++ b/CSS/sitelist layout.css
@@ -23,36 +23,47 @@
 
 @media only screen and (min-width: 600px){
 
+    .body{
+        width: 90%;
+        margin: auto;
+        font-size: 2em;
+    }
+
+    .body p{
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+    }
+
+    .body > div{
+        text-align: center;
+        background: var(--main-color);
+        margin-bottom: 10px;
+        border-radius: 5px;
+        width: 95%;
+        box-shadow: 3px 3px 3px var(--shadow-color);
+    }
+
+    .body h1{
+        text-align: center;
+        font-size: 1em;
+    }
+
+    .body > div img{
+        width: 100%;
+        border-radius: 5px;
+        height: 200px;
+    }
+
     .body a:visited, .body a:link{
         color: black;
         text-decoration: none;
     }
 
-    .body a:hover{
+    .body a:hover, a:active{
         color: rgb(255, 255, 255);
         transition: 1s;
         background-color: black;
-    }
-
-    .body h1{
-        text-align: center; 
-    }
-
-    a:active{
-        color: rgb(255, 255, 255);
         text-decoration: none;
-    }
-
-    .body{
-        width: 90%;
-        margin: auto;
-    }
-
-    .body > div{
-        text-align: center;
-        font-size: 20px;
-        background: var(--main-color);
-        margin-bottom: 10px;
     }
 
     .body > div > a > p:hover{
@@ -65,11 +76,48 @@
         margin-top: 9px;
         margin-bottom: 9px;
     }
+}
+
+@media only screen and (min-width: 768px){
+
+    .body{
+        width: 90%;
+        margin: auto;
+    }
+
+    .body h1{
+        font-size: 40px;
+        text-align: center;
+    }
+
+    .body > div{
+        font-size: 30px;
+        text-align: center;
+        background: var(--main-color);
+        margin-bottom: 10px;
+    }
 
     .body > div img{
         width: 100%;
         border-radius: 5px;
-        height: 130px;
+        height: 190px;
+    }
+
+    .body a:visited, .body a:link{
+        color: black;
+        text-decoration: none;
+    }
+
+    .body a:hover, .body a:active{
+        color: rgb(255, 255, 255);
+        transition: 1s;
+        background-color: black;
+    }
+
+    .body a:hover p{
+        animation-name: FntGrow2;
+        animation-duration: 750ms;
+        animation-fill-mode: forwards;
     }
 
     .body > div:nth-of-type(odd){
@@ -85,22 +133,6 @@
         float: right;
     }
 
-}
-
-@media only screen and (min-width: 768px){
-
-    .body h1{
-        font-size: 40px;
-    }
-
-    .body > div{
-        font-size: 30px;
-    }
-
-    .body > div img{
-        height: 190px;
-    }
-
     .body > div > a > p:hover{
         animation-name: FntGrow2;
         animation-duration: 750ms;
@@ -114,6 +146,10 @@
 
 @media only screen and (min-width: 992px){
 
+    .body a:hover{
+        font-size: 50px;
+    }
+
     .body h1{
         font-size: 60px;
     }
@@ -123,7 +159,7 @@
     }
 
     .body > div img{
-        height: 350px;
+        height: 250px;
     }
 
     .body > div > a > p:hover{
@@ -148,25 +184,22 @@
 @keyframes FntGrow1 {
     0%
     {
-        font-size: 20px;
+        font-size: 1em;
         margin-top: 20px;
-        margin-bottom: 20px;
     }
     50%
     {
-        font-size: 25px;
+        font-size: 1.1em;
         color: rgb(128, 128, 128);
         background-color: rgba(0, 0, 0, 0.479);
         margin-top: 17px;
-        margin-bottom: 17px;
     }
     100%
     {
-        font-size: 26.5px;
+        font-size: 1.2em;
         color: rgb(255, 255, 255);
         background-color: rgb(0, 0, 0);
         margin-top: 15px;
-        margin-bottom: 15px;
     }
 }
 
@@ -220,7 +253,7 @@
     }
 }
 
-/*this is the animation for the largest screen*/
+/*this is the animation for the double lined boxes in the large screen*/
 @keyframes FntGrow4 {
     0%
     {
