--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -36,6 +36,7 @@
         width: 100%;
         background: var(--main-color);
         border-collapse: collapse;
+        box-shadow: 3px 3px 3px var(--shadow-color);
     }
 
     .body th{
