--- a/CSS/resume.css
+++ b/CSS/resume.css
@@ -56,6 +56,56 @@
 
     .body{
         width: 80%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 4fr 10fr 1fr;
+    }
+
+    .body > h1, .body > h2, .body > h3{
+        height: max-content;
+    }
+
+    .body h1:first-of-type, .body h2:first-of-type{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    .body h2:first-of-type{
+        margin-top: 20%;
+    }
+
+    .body > h1:nth-last-of-type(2), .body > h3{
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    .body > h3{
+        margin-top: 20%;
+    }
+
+    .body > h1:last-of-type, .body > ul{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    .body > ul{
+        margin-top: 10%;
+        height: min-content;
+    }
+
+    .body > a{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        width: min-content;
+        margin: auto;
     }
 }
 
@@ -64,39 +114,94 @@
     .body
     {
         width: 90%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 5em 2fr 7fr 1fr;
     }
 
     .body > ul
     {
         text-align: left;
         padding: 30px;
-        background: var(--main-color);
     }
 
-    h1
+    .body > h1
     {
         font-size: 3em;
-        background: var(--main-color);
         width: fit-content;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 10px;
     }
 
-    h2
+    .body > h2
     {
         font-size: 2em;
-        background: var(--main-color);
         width: max-content;
         margin-left: auto;
         margin-right: auto;
+        margin-top: unset;
     }
 
     .body > h3
     {
         font-size: 1.5em;
-        background: var(--main-color);
         width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .body h1:first-of-type{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        font-size: 4em;
+    }
+
+    .body h2:first-of-type{
+        margin-top: 20%;
+        visibility: hidden;
+    }
+
+    .body > h1:nth-last-of-type(2), .body > h3{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    .body > h1:nth-last-of-type(2){
+        margin-top: 0px;
+    }
+
+    .body > h3{
+        margin-top: 6%;
+    }
+
+    .body > h1:last-of-type, .body > ul{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 3;
+        grid-row-end: 4;
+    }
+
+    .body > ul{
+        margin-top: 10%;
+        height: min-content;
+    }
+
+    .body > a{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 4;
+        grid-row-end: 5;
+        width: min-content;
+        height: min-content;
+        margin-top: 20px;
+        margin-bottom: 0px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -104,9 +209,63 @@
 
 @media only screen and (min-width: 1400px){
 
+    .body h2:first-of-type{
+        visibility: visible;
+    }
+
     .body
     {
         width: 70%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 6.5fr 10fr 1fr;
+    }
+
+    .body > h1, .body > h2, .body > h3{
+        height: max-content;
+    }
+
+    .body h1:first-of-type, .body h2:first-of-type{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    .body h2:first-of-type{
+        margin-top: 20%;
+    }
+
+    .body > h1:nth-last-of-type(2), .body > h3{
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    .body > h3{
+        margin-top: 20%;
+    }
+
+    .body > h1:last-of-type, .body > ul{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    .body > ul{
+        margin-top: 10%;
+        height: min-content;
+    }
+
+    .body > a{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        width: min-content;
+        margin: auto;
     }
 
     .body > ul
@@ -114,7 +273,6 @@
         text-align: left;
         padding: 30px;
         padding-top: 10px;
-        margin-top: 0px;
     }
 
     h1
@@ -129,6 +287,6 @@
 
     .body > h3
     {
-        font-size: 2.3em;
+        font-size: 1.8em;
     }
 }
