--- a/CSS/sitelist layout.css
+++ b/CSS/sitelist layout.css
@@ -146,34 +146,74 @@
 
 @media only screen and (min-width: 992px){
 
+    .body{
+        width: 90%;
+    }
+
     .body a:hover{
-        font-size: 50px;
+        background-color: var(--main-color);
+        border-radius: 5px;
     }
 
     .body h1{
         font-size: 60px;
     }
 
-    .body > div{
+    .body div{
         font-size: 40px;
+        margin-right: 0px;
+        margin-left: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        float: none;
+        width: 400px;
+        height: 350px;
+        border-radius: 5px;
+        display: inline-flex;
     }
 
     .body > div img{
         height: 250px;
     }
 
+    .body > div > a > p{
+        margin-top: 0px;
+    }
+
     .body > div > a > p:hover{
-        animation-name: FntGrow3;
+        animation-name: FntGrow4;
         animation-duration: 750ms;
         animation-fill-mode: forwards;
     }
 
     .body > div > a > p#twoLiner{
-        margin-top: 17px;
-        margin-bottom: 17px;
+        margin-top: 0px;
     }
 
     .body > div p#twoLiner:hover{
+        animation-name: FntGrow4;
+        animation-duration: 750ms;
+        animation-fill-mode: forwards;
+    }
+
+    .body > div:nth-of-type(odd){
+        border-radius: 5px;
+        clear: none;
+        width: 400px;
+        float: none;
+        margin-right: 0px;
+        height: 350px;
+    }
+
+    .body > div:nth-of-type(even){
+        border-radius: 5px;
+        width: 400px;
+        float: none;
+        margin-right: 0px;
+        height: 350px;
+    }
+
+    .body a:hover p{
         animation-name: FntGrow4;
         animation-duration: 750ms;
         animation-fill-mode: forwards;
@@ -216,7 +256,7 @@
         font-size: 35px;
         color: rgb(128, 128, 128);
         background-color: rgba(0, 0, 0, 0.479);
-        margin-top: 30px;
+        margin-top: 15px;
         margin-bottom: 30px;
     }
     100%
@@ -224,8 +264,8 @@
         font-size: 37px;
         color: rgb(255, 255, 255);
         background-color: rgb(0, 0, 0);
-        margin-top: 27px;
-        margin-bottom: 27px;
+        margin-top: 0px;
+        margin-bottom: 0px;
     }
 }
 
@@ -257,20 +297,18 @@
 @keyframes FntGrow4 {
     0%
     {
-        font-size: 40px;
+        font-size: 30px;
     }
     50%
     {
-        font-size: 45px;
+        font-size: 35px;
         color: rgb(128, 128, 128);
         background-color: rgba(0, 0, 0, 0.479);
     }
     100%
     {
-        font-size: 47px;
+        font-size: 37px;
         color: rgb(255, 255, 255);
         background-color: rgb(0, 0, 0);
-        margin-top: 7px;
-        margin-bottom: 7px;
     }
 }
