--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -29,7 +29,7 @@
         width: 100%;
         background: var(--main-color);
         border-radius: 5px;
-        font-size: 10px;
+        font-size: 1em;
         box-shadow: 3px 3px 3px var(--shadow-color);
     }
 
@@ -52,6 +52,10 @@
         height: 500px;
     }
 
+    /*this the title content to change the font*/
+    h2{
+        font-family: 'open';
+    }
 }
 
 @media only screen and (min-width: 768px){
@@ -64,6 +68,7 @@
         font-size: 15px;
     }
 
+    /*this the title content*/
     h1{
         margin: 5px;
     }
@@ -128,6 +133,7 @@
         height: 550px;
     }
 
+    /*this is the side content that is on the side*/
     .body h1, .body h2:first-of-type{
         grid-column-start: 2;
         grid-column-end: 3;
