--- a/CSS/index layout.css
+++ b/CSS/index layout.css
@@ -84,6 +84,10 @@
     .bio h2{
         text-align: center;
     }
+
+    .bio p{
+        font-family: 'open';
+    }
 }
 
 /*the overides for all screens bigger than 768px*/
